--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,21 @@
 	color: #ff5400;
 }
 
+.primary-btn {
+	border-radius: 8px;
+	background: #ff5400;
+	border: none;
+	padding: 16px;
+	color: #fff;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 700;
+}
+
+.relative-container {
+	position: relative;
+}
+
 /* --------------------------------- navbar --------------------------------- */
 nav {
 	display: flex;
@@ -23,6 +38,7 @@ nav {
 	display: flex;
 	align-items: center;
 	gap: 1rem;
+	cursor: pointer;
 }
 
 nav img {
@@ -55,6 +71,85 @@ nav a {
 	display: none;
 }
 
+/* ----------------------------- banner section ----------------------------- */
+.banner-section {
+	margin-top: 16px;
+	margin-bottom: 100px;
+}
+
+.banner-background {
+	background-image: url("../Images/Group\ 13\ \(1\)\ \(1\).png");
+	height: 500px;
+	border-radius: 1rem;
+}
+
+.banner-content {
+	position: absolute;
+	top: 0;
+	background: linear-gradient(
+		180deg,
+		rgba(19, 19, 24, 0.8) 0%,
+		rgba(19, 19, 24, 0) 100%
+	);
+	width: 100%;
+	height: 100%;
+	color: #fff;
+	border-radius: 1rem;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.banner-title {
+	font-size: 64px;
+	font-weight: 800;
+	margin-top: 0;
+	margin-bottom: 24px;
+}
+
+.banner-description {
+	margin-top: 0;
+	max-width: 676px;
+	margin: 0 auto;
+	font-size: 16px;
+	font-weight: 400;
+	margin-bottom: 3rem;
+}
+
+.banner-input-group {
+	display: flex;
+	align-items: center;
+	gap: 24px;
+	border-radius: 8px;
+	background: rgba(255, 255, 255, 0.3);
+	padding: 1rem;
+}
+
+.banner-input-with-dropdown {
+	border-radius: 8px;
+	background: #fff;
+	color: #131318b2;
+	padding: 1rem;
+	display: flex;
+	align-items: center;
+}
+
+.banner-input-with-dropdown input {
+	border: none;
+	font-size: 1rem;
+	width: 160px;
+}
+
+.banner-input-with-dropdown input:focus {
+	outline: none;
+}
+
+.banner-btn {
+	width: 174px;
+}
+
 /* ----------------------------- mobile display ----------------------------- */
 @media screen and (max-width: 600px) {
 	/* --------------------------------- navbar --------------------------------- */
@@ -77,5 +172,31 @@ nav a {
 
 	.nav-hamburger {
 		display: block;
+		cursor: pointer;
+	}
+
+	/* ----------------------------- banner section ----------------------------- */
+	.banner-title {
+		font-size: 22px;
+		margin-bottom: 0;
+		margin-bottom: 8px;
+	}
+
+	.banner-description {
+		font-size: 14px;
+		max-width: 300px;
+	}
+
+	.banner-input-group {
+		flex-direction: column;
+	}
+
+	.banner-input-with-dropdown {
+		width: 255px;
+		justify-content: space-between;
+	}
+
+	.banner-btn {
+		width: 100%;
 	}
 }
