--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
 	border-radius: 8px;
 	background: #ff5400;
 	border: none;
-	padding: 16px;
+	padding: 16px 32px;
 	color: #fff;
 	text-align: center;
 	font-size: 16px;
@@ -25,6 +25,10 @@
 
 .relative-container {
 	position: relative;
+}
+
+.position-absolute {
+	position: absolute;
 }
 
 .section-title {
@@ -37,6 +41,8 @@
 	color: rgba(19, 19, 24, 0.7);
 	font-size: 16px;
 	font-weight: 400;
+	max-width: 643px;
+	margin: 0 auto;
 }
 
 /* --------------------------------- navbar --------------------------------- */
@@ -180,12 +186,65 @@ nav a {
 	margin-bottom: 16px;
 }
 
+.popular-section .primary-btn {
+	margin-top: 32px;
+}
+
 .popular-img {
 	flex: 1;
 }
 
 .popular-img img {
 	width: 100%;
+}
+
+/* ------------------------- Choose Your Destination ------------------------ */
+.destination-section {
+	margin-bottom: 100px;
+	text-align: center;
+}
+
+.destination-title {
+	margin-bottom: 24px;
+}
+
+.destination-description {
+	margin-top: 0;
+	margin-bottom: 48px;
+}
+
+.destination-img-container {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
+
+.destination-section img {
+	width: 100%;
+}
+
+.destination-first-line,
+.destination-sec-line,
+.destination-third-line {
+	display: flex;
+	gap: 24px;
+}
+
+.destination-first-line > div,
+.destination-sec-line > div,
+.destination-third-line > div {
+	position: relative;
+}
+
+.destination-img-container p {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	color: #fff;
+	font-size: 28px;
+	font-weight: 800;
 }
 
 /* ----------------------------- mobile display ----------------------------- */
@@ -249,6 +308,13 @@ nav a {
 
 	/* ------------------------ our popular tours section ----------------------- */
 	.popular-section {
+		flex-direction: column;
+	}
+
+	/* ------------------------- Choose Your Destination ------------------------ */
+	.destination-first-line,
+	.destination-sec-line,
+	.destination-third-line {
 		flex-direction: column;
 	}
 }
