--- a/styles/style.css
+++ b/styles/style.css
@@ -378,6 +378,48 @@ nav a {
 	margin: 0;
 }
 
+/* --------------------------------- footer --------------------------------- */
+footer {
+	background-color: rgba(19, 19, 24, 0.05);
+	height: 450px;
+	display: flex;
+	align-items: center;
+}
+
+.footer-title {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 24px;
+	margin-bottom: 16px;
+}
+
+.footer-title h2 {
+	margin: 0;
+}
+
+.footer-description {
+	margin-bottom: 32px;
+}
+
+.footer-icon-container {
+	margin-bottom: 50px;
+}
+
+.footer-icon-container a {
+	text-decoration: none;
+	margin-right: 16px;
+	font-size: 24px;
+}
+
+.footer-copyright {
+	color: #131318;
+	font-size: 16px;
+	font-weight: 300;
+	line-height: normal;
+	margin-top: 50px;
+}
+
 /* ----------------------------- mobile display ----------------------------- */
 @media screen and (max-width: 600px) {
 	/* ------------------------------ common style ------------------------------ */
@@ -391,7 +433,8 @@ nav a {
 
 	/* --------------------------------- navbar --------------------------------- */
 	header,
-	main {
+	main,
+	.footer {
 		padding: 8px;
 	}
 
@@ -472,5 +515,18 @@ nav a {
 	.newsletter-absolute-box h4 {
 		font-size: 24px;
 		margin: 0;
+	}
+
+	/* --------------------------------- footer --------------------------------- */
+	.footer-description {
+		margin-bottom: 16px;
+	}
+
+	.footer-icon-container {
+		margin-bottom: 24px;
+	}
+
+	.footer-copyright {
+		margin-top: 24px;
 	}
 }
