--- a/styles/style.css
+++ b/styles/style.css
@@ -461,6 +461,68 @@ footer {
 	border-radius: 16px;
 }
 
+/* ------------------------ Deals & Discounts section ----------------------- */
+.deals-section {
+	margin-bottom: 100px;
+}
+
+.deals-tour-container {
+	margin-top: 24px;
+	height: 500px;
+}
+
+.deals-tour-container > img {
+	width: 100%;
+}
+
+.deals-description {
+	margin-bottom: 48px;
+}
+
+.deals-absolute-right {
+	position: absolute;
+
+	width: 479px;
+	height: 289px;
+
+	border-radius: 1rem;
+	top: 56px;
+	right: 50px;
+
+	border: 2px solid #fff;
+	background: rgba(255, 255, 255, 0.8);
+	backdrop-filter: blur(2.5px);
+	padding: 50px;
+}
+
+.deals-absolute-left {
+	left: 50px;
+}
+
+.flex-container {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+.deals-time {
+	display: flex;
+	gap: 32px;
+}
+
+.deals-absolute-right p {
+	color: #5a5a5d;
+	font-size: 16px;
+	font-weight: 400;
+}
+
+.deals-price {
+	color: #ff5400;
+	font-family: Mulish;
+	font-size: 20px;
+	font-weight: 800;
+}
+
 /* ----------------------------- mobile display ----------------------------- */
 @media screen and (max-width: 600px) {
 	/* ------------------------------ common style ------------------------------ */
@@ -584,5 +646,36 @@ footer {
 	.twenty-item-content {
 		flex-direction: column;
 		align-items: center;
+	}
+
+	/* ------------------------ Deals & Discounts section ----------------------- */
+	.deals-tour-container > img {
+		height: 500px;
+	}
+
+	.deals-time {
+		flex-wrap: wrap;
+		gap: 0;
+	}
+
+	.deals-absolute-right,
+	.deals-absolute-left {
+		width: 280px;
+		height: auto;
+		border: 1px solid red;
+
+		left: 16px;
+		right: 16px;
+		bottom: 16px;
+
+		padding: 24px;
+	}
+
+	.deals-title {
+		margin: 8px 0;
+	}
+
+	.deals-absolute-right p {
+		margin: 0;
 	}
 }
